...
                          children: [
                            Text(
                              movie.title,
                              style: kHeading5,
                            ),
                            ElevatedButton(
                              key: const Key('watchlistButton'),
                              onPressed: () async {
                                if (!isAddedWatchlist) {
                                  context
                                      .read<MovieDetailBloc>()
                                      .add(AddWatchlistMovie(movie));
                                } else {
...
        Padding(
          padding: const EdgeInsets.all(8.0),
          child: CircleAvatar(
            backgroundColor: kRichBlack,
            foregroundColor: Colors.white,
            child: IconButton(
              key: const Key('iconBack'),
              icon: const Icon(Icons.arrow_back),
              onPressed: () {
                Navigator.pop(context);
              },
            ),
          ),
...
