...
        scrollDirection: Axis.horizontal,
        itemBuilder: (context, index) {
          final televisi = tv[index];
          return Container(
            padding: const EdgeInsets.all(8),
            child: InkWell(
              key: const Key('itemTV'),
              onTap: () {
                Navigator.pushNamed(
                  context,
                  TV_DETAIL_ROUTE,
                  arguments: televisi.id,
                );
...
